(fix) improved bubble triangle position on mobile

--- a/css/components.css
+++ b/css/components.css
@@ -55,7 +55,7 @@ text-node {
 .chat {
   display: flex;
   flex-direction: column;
-  gap: 0.625rem;
+  gap: 0.3125rem;
 
   &::after {
     content: "";
@@ -66,13 +66,13 @@ text-node {
 
   .bubble {
     position: relative;
-    border-radius: var(--border-radius-m);
+    border-radius: var(--border-radius-s);
     font-size: 3rem;
     width: fit-content;
     font-family: 'pp_right_grotesk_monoregular';
 
     &::after {
-      bottom: -1px;
+      bottom: -0.0625rem;
       border-style: solid;
       border-width: 0.625rem;
       border: 0.625rem solid transparent;
@@ -121,7 +121,7 @@ text-node {
       background-color: var(--gray-light);
 
       &::after {
-        left: -12px;
+        left: -0.75rem;
         transform-origin: center bottom;
         transform: rotateZ(45deg);
       }
@@ -134,8 +134,7 @@ text-node {
       font-family: 'pp_right_grotesk_monomedium';
 
       &::after {
-        bottom: -1px;
-        right: -12px;
+        right: -0.75rem;
         transform-origin: center bottom;
         transform: rotateZ(-45deg);
       }
@@ -210,31 +209,38 @@ text-node {
       background-color: var(--gray);
       position: absolute;
       display: grid;
-      grid-template: auto / auto 1fr;
-      max-width: calc(var(--main-max-width) - var(--main-padding) * 2);
+      grid-template: auto / auto auto;
       padding: 0.625rem;
       gap: 0.635rem;
       top: auto;
       bottom: 0;
-      width: calc(100% - var(--main-padding));
+      width: 100%;
       border-radius: var(--border-radius-l);
       pointer-events: all;
 
       .options-primary {
-        width: fit-content;
+        display: flex;
+        flex-direction: row-reverse;
         right: 0.625rem;
+
+        ul {
+          flex-direction: row-reverse;
+        }
       }
 
       .options-secondary {
         overflow: hidden;
         flex: 1 1 auto;
+
+        ul {
+          flex-direction: row;
+        }
       }
 
       ul {
         width: 100%;
         display: flex;
         gap: 0.625rem;
-        flex-direction: row;
         overflow-x: auto;
         border-radius: 3.125rem;
       }
