--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
   --primary-light: #F29E61;
   --border-radius-l: 2.5rem;
   --border-radius-m: 1.25rem;
+  --border-radius-s: 0.625rem;
   --gray: #E7E6E6;
   --main-max-width: 40rem;
   --main-padding: 1.875rem;
